Issue #11; clients page updated, content spacing adjusted
Clients section html corrected for bs 4.3.1 standards.
Content spacing adjusted for responsiveness and smooth scroll.

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,11 +64,26 @@ nav.navbar {
 }
 
 .short-section {
-	height: 70vh;
+	height: 65vh;
 }
 
 .full-section {
 	height: 100vh;
+}
+
+.contact-row {
+	margin-top: 8em;
+	margin-bottom: 5em;
+}
+
+.short-row {
+	margin-top: 6em;
+	margin-bottom: 5em;
+}
+
+.scroll-row {
+	margin-top: 2em;
+	margin-bottom: 2em;
 }
 
 /* Jumbotron styles */
@@ -119,16 +134,6 @@ span.fa-light {
 span.fa-dark {
   color: #000;
   font-size: 2em;
-}
-
-.content-row {
-	margin-top: 5em;
-	margin-bottom: 5em;
-}
-
-.scroll-row {
-	margin-top: 2em;
-	margin-bottom: 2em;
 }
 
 /*.section-top {
@@ -227,12 +232,34 @@ img {
   max-width: 100%;
 }*/
 
-/* change navbar background on collapse */
+
+/*@media (max-width: 576px) {
+	.content-row {
+		margin-top: 5em;
+		margin-bottom: 5em;
+	}
+}*/
+
 @media (max-width: 768px) {
   nav.navbar {
     background: rgba(0,0,0,.5);
   }
 	.logo {
 		padding-left: 0;
+	}
+	.content-row {
+		margin-top: 10em;
+		margin-bottom: 5em;
+	}
+	.content-row {
+		margin-top: 7em;
+		margin-bottom: 5em;
+	}
+}
+
+@media (min-width: 768px) {
+	.content-row {
+		margin-top: 9em;
+		margin-bottom: 6em;
 	}
 }
